--- a/scss/game/index.scss
+++ b/scss/game/index.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400&display=swap');
+@import "animations";
 
+
+$pink-color: rgb(253, 27, 94);
 body {
   position: relative;
   margin: 0;
@@ -80,26 +83,84 @@ body {
   @include flex-rules(row, center, center);
   @include size(100vw, 5rem);
   position: fixed;
-  background: rgb(0, 0, 0, 0.9);
+  transition: background-color 0.5s;
+  background: transparent;
   z-index: 100;
 
   .navbar-container {
-    @include flex-rules(row, start, center);
+    @include flex-rules(row, space-between, center);
+    padding: 0 5rem;
     width: 100%;
 
 
-    .navbar-image-container {
-      @include flex-rules(row, center, center);
-      font-family: alternate-gothic-no-2-d, sans-serif;
-      font-weight: bold;
-      font-size: 2rem;
-      color: rgb(255, 2, 69);
+    .navbar-container-left {
+      @include flex-rules(row, start, center);
+      flex: 2;
 
-      img {
-        width: 5rem;
+      > img {
+        width: 10rem;
+      }
+
+      > button {
+        background-color: transparent;
+        outline: none;
+        border: none;
+        height: 3rem;
+        color: white;
+        width: fit-content;
+        font-weight: bold;
+        font-size: 20px;
+        cursor: pointer;
+        margin-left: 4rem;
+
+        .underline {
+          width: 0;
+          height: 0.25rem;
+          background-color: $pink-color;
+          transition: width 0.5s;
+        }
+
+        &:hover .underline {
+          width: 100%;
+        }
+      }
+    }
+
+    .navbar-container-right {
+      @include flex-rules(row, end, center);
+      flex: 1;
+
+      > button {
+        font-weight: bold;
+        font-size: 20px;
+        padding: 1rem;
+        background-color: transparent;
+        outline: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
+        border: 0.1rem solid white;
+
+        > a {
+          color: white;
+          text-decoration: none;
+          text-underline: none;
+          transition: color 0.5s;
+        }
+
+        &:hover {
+          background-color: white;
+
+          > a {
+            color: $pink-color;
+          }
+        }
       }
     }
   }
+}
+
+.navbar-scrolled {
+  background-color: black;
 }
 
 .video-top {
@@ -114,9 +175,8 @@ body {
     height: 50rem;
     width: 100vw;
     object-fit: cover;
-
-
   }
+
 
   .video-cover {
     @include absolute(0, 50%);
@@ -156,6 +216,18 @@ body {
         transition: 0.5s;
       }
     }
+  }
+}
+
+.trailer {
+  @include flex-rules(column, center, center);
+  height: 50rem;
+
+  > h3 {
+    font-family: 'Kanit', sans-serif;
+    color: white;
+    font-size: 3rem;
+    border-bottom: 0.2rem solid $pink-color;
   }
 }
 
